// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout should center view when paddings explicitly set to nil 1`] = `
<div
  class="vlayout_roundRect"
  style="position: absolute; left: 20px; z-index: 1; right: 20px; top: 20px; bottom: 20px; background-color: rgb(255, 204, 204); box-sizing: border-box;"
>
  <div
    style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
  >
    <div
      style="position: absolute; left: 0px; top: 0px; width: 10000000px; height: 10000000px;"
    />
  </div>
  <div
    style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
  >
    <div
      style="position: absolute; left: 0px; top: 0px; width: 200%; height: 200%;"
    />
  </div>
</div>
`;

exports[`layout should center view when paddings explicitly set to nil 2`] = `
<div
  class="vlayout_roundRect"
  style="position: absolute; z-index: 1; background-color: rgb(255, 204, 204); box-sizing: border-box; left: 50%; transform: translateX(-50%) translateY(-50%); top: 50%; max-width: 120px; min-width: 120px; width: 120px; max-height: 80px; min-height: 80px; height: 80px;"
>
  <div
    style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
  >
    <div
      style="position: absolute; left: 0px; top: 0px; width: 10000000px; height: 10000000px;"
    />
  </div>
  <div
    style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
  >
    <div
      style="position: absolute; left: 0px; top: 0px; width: 200%; height: 200%;"
    />
  </div>
</div>
`;
